== 1.25 / YYYY-MM-DD

* Bugs:
  * Force the default internal application encoding to be used when reading the
    MIME types database. Based on a change by briangamble, found in the rapid7
    fork.
* New extensions:
  * mjpeg (video/x-motion-jpeg) based on a change by punkrats, found in the
    vidibus fork.
* Modernized MiniTest configuration.

== 1.24 / 2013-08-14

* Code Climate:
  * Working on improving the quality of the mime-types codebase through the use
    of Code Climate. https://codeclimate.com/github/halostatue/mime-types
  * Simplified MIME::Type.from_array to make more assumptions about assignment.
* Documentation:
  * LeoYoung <mrleoyoung@gmail.com> pointed out that the README.rdoc contained
    examples that could never possibly work because MIME::Types#[] returns (for
    all the versions I have handy) an array, not a single type. I have updated
    README.rdoc to reflect this.
* Removed Nokogiri as a declared development dependency. It is still required
  if you're going to use the IANA parser functionality, but it is not necessary
  for most development purposes. This has been removed to ensure that Travis CI
  passes on Ruby 1.8.7.
* New MIME Types:
  * 7zip (application/x-7z-compressed). Fixes a request by kodram.
    https://github.com/halostatue/mime-types/issues/32
  * application/x-www-form-urlencoded. Fixes a request by alexkwolfe.
    https://github.com/halostatue/mime-types/issues/39
  * Various new MIME types from IANA:
    * application/mbms-schedule\+xml from 3GPP and Turcotte.
    * application/provenance\+xml from W3C and Herman.
    * application/session-info from 3GPP and Firmin.
    * application/urc-grpsheet\+xml, application/urc-targetdesc\+xml,
      application/uisocketdesc\+xml from Zimmermann.
    * application/api\+json from Klabnik.
    * application/vnd.etsi.pstn\+xml from Han and Belling.
    * application/vnd.fujixerox.docuworks.container from Tashiro.
    * application/vnd.windows.devicepairing from Dandawate.